[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
lazy_static = "1.4.0"
log = "0.4.20"
num = "0.4.1"
num-bigint = "0.4.4"
pico-args = "0.5.0"
regex = "1.10.2"
vector3d = "0.2.1"
